# vision-sprayer

./: .gitignore  README.md  pyproject.toml
docs/: endgoal.md
src/sprayer_sim/: __init__.py  app.py  detector.py  domain.py  frame_source.py  orchestrator.py  renderer.py  targeting.py  tracker.py
src/vision_sprayer/: __init__.py  __main__.py  actuator.py  app.py  config.py  main.py  metrics.py
src/vision_sprayer/adapters/actuator/: fake_actuator.py  serial_actuator.py
src/vision_sprayer/adapters/camera/: opencv_camera_source.py
src/vision_sprayer/adapters/detection/: yolo_detector.py
src/vision_sprayer/adapters/rendering/: opencv_renderer.py  pygame_renderer.py
src/vision_sprayer/adapters/simulation/: simulated_detector.py  simulated_frame_source.py
src/vision_sprayer/app/: __main__.py  cli.py  opencv_runner.py  pygame_runner.py
src/vision_sprayer/domain/: models.py
src/vision_sprayer/observability/: metrics.py  snapshot_metrics.py  timing.py
src/vision_sprayer/pipeline/: factories.py  orchestrator.py
src/vision_sprayer/ports/: actuator.py  detector.py  frame_source.py
src/vision_sprayer/runners/: opencv_runner.py  pygame_runner.py
src/vision_sprayer/scenarios/: camera.py  components.py  simulation.py
src/vision_sprayer/targeting/: targeting_policy.py
src/vision_sprayer/tracking/: target_tracker.py
tests/: test_pipeline.py  test_targeting.py  test_tracker.py
tests/integration/: test_sim_pipeline.py
tests/unit/: test_serial_actuator.py  test_target_tracker.py  test_targeting_policy.py
