[project]
name = "vision-sprayer"
version = "0.1.0"
description = "Realtime perception pipeline for an embodied AI vision sprayer."
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.4.5",
  "opencv-python>=4.13.0.92",
  "pygame>=2.6.0",
  "ultralytics>=8.4.51",
]

[project.scripts]
vision-sprayer = "vision_sprayer.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
